--- a/index.html
+++ b/index.html
@@ -4,9 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homework</title>
+    <title>Demo site</title>
 </head>
 <body>
-    <H1>Привет</H1>
+    <header>
+        <a href="#">
+         <img src="./images/logo.png" alt="">
+         <nav>
+             <ul>
+                 <li>Студия</li>
+                 <li>Портфолио</li>
+                 <li>Контакты</li>
+
+             </ul>
+         </nav>
+            <div>
+             <a href="info@devstudio.com">info@devstudio.com</a>
+            </div>
+
+            <div>
+             <a href="+38 096 111 11 11">+38 096 111 11 11</a>
+            </div>
+        </header>
+    <main>
+         <section class="slider">
+             <h1>Эффективные решения для вашего бизнеса</h1>
+             <button class="conteined">Заказать услугу</button>
+         </section>
+         <section class="discription">
+        <div class="top-cntent">
+           <title class="Attention">
+             <h2>Внимание к деталям</h2>
+             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+           </title>
+           <title class="Punctuality">
+             <h2>Пунктуальность</h2>
+             <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+           </title>
+           <title class="Planning">
+             <h2>Планирование</h2>
+             <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+           </title>
+           <title class="technology">
+             <h2>Современные технологии</h2>
+             <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+           </title>
+        </div>  
+         </section>
+    </main>
+    <footer></footer>
 </body>
 </html>
