--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 
             <address>
             <ul>
-              <li><p>г. Киев, пр-т Леси Украинки, 26</p></li>
+              <li><a href="https://goo.gl/maps/195gcLRyk6KfF39J8">г. Киев, пр-т Леси Украинки, 26</a></li>
               <li><a href=mailto:info@example.com>info@example.com</a></li>
-             <li><a href=tel:+380991111111>+38 099 111 11 11</a></li> 
+              <li><a href=tel:+380991111111>+38 099 111 11 11</a></li> 
             </ul>
             </address>
 
